--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   encrypt:
   rsa_encrypt: ^2.0.0
   basic_utils: ^5.1.2
+  bip39: ^1.0.6
+  ed25519_hd_key: ^2.2.0
+  pointycastle: ^3.6.1
+  cryptography: ^2.0.5
   
 dev_dependencies:
   flutter_test:
