--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   bip39: ^1.0.6
   bip32: ^2.0.0
   pinenacl: ^0.5.1
+  path_provider: ^2.0.11
+  crypto: ^3.0.2
   # tuple: ^2.0.0
   # rsa_encrypt: ^2.0.0
   # ed25519_hd_key: ^2.2.0
@@ -72,7 +74,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
-  #   - images/a_dot_burr.jpeg
+  #   - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
