--- a/backend/package.json
+++ b/backend/package.json
@@ -5,15 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "moralis": "^2.2.0",
-    "node-json-db": "^2.1.1"
+    "node-json-db": "^2.1.1",
+    "nodemon": "^2.0.19"
   }
 }
