--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -27,61 +27,60 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cupertino_icons: ^1.0.2
+  dartz: ^0.10.1
+  dio: ^4.0.6
+  easy_localization: ^3.0.1
+  encrypt: ^5.0.1
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  encrypt: ^5.0.1
-  web3dart: ^2.3.5
-  basic_utils: ^5.1.2
-  bip39: ^1.0.6
-  bip32: ^2.0.0
-  pinenacl: ^0.5.1
+  flutter_bloc: ^8.1.1
+  freezed_annotation: ^2.1.0
+  get_it: ^7.2.0
+  injectable: ^1.5.3
+  json_annotation: ^4.6.0
+  no_context_navigation: ^2.1.2
   path_provider: ^2.0.11
-  crypto: ^3.0.2
+  retrofit: ^3.0.1+1
+  url_launcher: ^6.1.5
+  web3dart: ^2.3.5
+
+  # Encryption
+  bip32: ^2.0.0
+  bip39: ^1.0.6
   convert: ^3.0.2
+  crypto: ^3.0.2
+  pinenacl: ^0.5.1
   pointycastle: ^3.6.1
-  # tuple: ^2.0.0
-  # rsa_encrypt: ^2.0.0
-  # ed25519_hd_key: ^2.2.0
-  # cryptography: ^2.0.5
-  
+
 dev_dependencies:
+  build_runner: ^2.2.0
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  freezed: ^2.1.0+1
+  injectable_generator: ^1.5.4
+  json_serializable: ^6.3.1
+  retrofit_generator: ^4.0.3+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/translations/
   #   - assets/images/
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
