--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "json-url": "^3.0.0",
     "moralis": "^2.2.0",
+    "nanoid": "^3.3.4",
     "node-json-db": "^2.1.1"
   }
 }
