--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   retrofit: ^3.0.1+1
   url_launcher: ^6.1.5
   web3dart: ^2.3.5
+  flutter_secure_storage: ^6.0.0
+  file_picker: ^5.0.1
+  http: ^0.13.5
 
   # Encryption
   bip32: ^2.0.0
@@ -63,6 +66,7 @@ dev_dependencies:
   injectable_generator: ^1.5.4
   json_serializable: ^6.3.1
   retrofit_generator: ^4.0.3+1
+  mockito: ^5.3.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
