--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "deepmerge": "^4.2.2",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "json-url": "^3.0.0",
