--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   retrofit: ^3.0.1+1
   url_launcher: ^6.1.5
   web3dart: ^2.3.5
+  dotted_border: ^2.0.0+2
+  sizer: ^2.0.15
 
   # Encryption
   bip32: ^2.0.0
