--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "deepmerge": "^4.2.2",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "firebase-admin": "^11.0.1",
     "json-url": "^3.0.0",
     "moralis": "^2.2.0",
     "nanoid": "^3.3.4",
