--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.hackathon_moralis">
+    package="com.comet.dbox">
    <application
-        android:label="hackathon_moralis"
+        android:label="D-Box"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
