--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,6 +32,9 @@ if (flutterTargetSdkVersion == null) {
 }
 
 apply plugin: 'com.android.application'
+// START: FlutterFire Configuration
+apply plugin: 'com.google.gms.google-services'
+// END: FlutterFire Configuration
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
