--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   crypto: ^3.0.2
   pinenacl: ^0.5.1
   pointycastle: ^3.6.1
+  firebase_core: ^1.22.0
 
 dev_dependencies:
   build_runner: ^2.2.0
