--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_secure_storage: ^6.0.0
   file_picker: ^5.0.1
   http: ^0.13.5
+  flutter_svg: ^1.1.5
 
   # Encryption
   bip32: ^2.0.0
@@ -96,7 +97,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/translations/
-  #   - assets/images/
+    - assets/icons/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
