--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   firebase_messaging: ^13.0.1
   # syncfusion_flutter_pdfviewer: ^20.2.49-beta
   open_filex: ^4.1.1
+  flutter_local_notifications: ^9.9.1
 
 dev_dependencies:
   build_runner: ^2.2.0
