--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   # syncfusion_flutter_pdfviewer: ^20.2.49-beta
   open_filex: ^4.1.1
   flutter_local_notifications: ^9.9.1
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   build_runner: ^2.2.0
