--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "deepmerge": "^4.2.2",
     "dotenv": "^16.0.2",
@@ -18,6 +19,7 @@
     "firebase-admin": "^11.0.1",
     "json-url": "^3.0.0",
     "moralis": "^2.2.0",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "^3.3.4",
     "node-json-db": "^2.1.1",
     "nodemon": "^2.0.19"
