--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,16 +2,20 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>FirebaseDynamicLinksCustomDomains</key>
+	<array>
+		<string>https://dboxapp.page.link</string>
+	</array>
 	<key>NSCameraUsageDescription</key>
 	<string>D-Box need to access to camera, in order to get a file and store into ipfs</string>
-    <key>NSAppleMusicUsageDescription</key>
-    <string>D-Box need to access to music file for store into ipfs</string>
-    <key>NSPhotoLibraryUsageDescription</key>
-    <string>D-Box need to access to photo file for store into ipfs</string>
-    <key>UISupportsDocumentBrowser</key>
-    <true/>
-    <key>LSSupportsOpeningDocumentsInPlace</key>
-    <true/>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>D-Box need to access to music file for store into ipfs</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>D-Box need to access to photo file for store into ipfs</string>
+	<key>UISupportsDocumentBrowser</key>
+	<true/>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<true/>
 	<key>FirebaseAppDelegateProxyEnabled</key>
 	<false/>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
