--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,62 +27,56 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bip32: ^2.0.0
+  bip39: ^1.0.6
+  change_app_package_name: ^1.1.0
+  convert: ^3.0.2
+  crypto: ^3.0.2
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
   dio: ^4.0.6
+  dotted_border: ^2.0.0+2
   easy_localization: ^3.0.1
   encrypt: ^5.0.1
   equatable: ^2.0.5
+  file_picker: ^5.0.1
+  firebase_core: ^1.22.0
+  firebase_dynamic_links: ^4.3.7
+  firebase_messaging: ^13.0.1
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
+  flutter_local_notifications: ^9.9.1
+  flutter_secure_storage: ^6.0.0
+  flutter_svg: ^1.1.5
   freezed_annotation: ^2.1.0
   get_it: ^7.2.0
+  http: ^0.13.5
+  image_picker: ^0.8.5+3
   injectable: ^1.5.3
   json_annotation: ^4.6.0
   no_context_navigation: ^2.1.2
+  open_filex: ^4.1.1
   path_provider: ^2.0.11
-  retrofit: ^3.0.1+1
-  sizer: ^2.0.15
-  http: ^0.13.5
-
-  # helper
-  change_app_package_name: ^1.1.0
-  flutter_svg: ^1.1.5
-  flutter_secure_storage: ^6.0.0
-  file_picker: ^5.0.1
-  url_launcher: ^6.1.5
-  web3dart: 2.3.5
-  dotted_border: ^2.0.0+2
-  timeago: ^3.3.0
-
-  # Encryption
-  bip32: ^2.0.0
-  bip39: ^1.0.6
-  convert: ^3.0.2
-  crypto: ^3.0.2
   pinenacl: ^0.5.1
   pointycastle: ^3.6.1
-
-  #firebase
-  firebase_core: ^1.22.0
-  firebase_messaging: ^13.0.1
-  # syncfusion_flutter_pdfviewer: ^20.2.49-beta
-  open_filex: ^4.1.1
-  flutter_local_notifications: ^9.9.1
-  image_picker: ^0.8.5+3
+  retrofit: ^3.0.1+1
+  sizer: ^2.0.15
+  timeago: ^3.3.0
+  url_launcher: ^6.1.5
+  web3dart: 2.3.5
 
 dev_dependencies:
   build_runner: ^2.2.0
+  flutter_gen_runner: ^4.3.0
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
   freezed: ^2.1.0+1
   injectable_generator: ^1.5.4
   json_serializable: ^6.3.1
-  retrofit_generator: ^4.0.3+1
   mockito: ^5.3.0
-  flutter_gen_runner: ^4.3.0
+  retrofit_generator: ^4.0.3+1
 
 flutter_gen:
   output: lib/generated/ # Optional (default: lib/gen/)
@@ -93,11 +87,9 @@ flutter_gen:
     flutter_svg: true
     flare_flutter: true
     rive: true
-
   # colors:
   #   inputs:
   #     - assets/color/colors.xml
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
