--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,9 @@ dependencies:
   timeago: ^3.3.0
   url_launcher: ^6.1.5
   web3dart: 2.3.5
+  screenshot: ^1.2.3
+  image_gallery_saver: '^1.7.1'
+  permission_handler: ^10.0.0
 
 dev_dependencies:
   build_runner: ^2.2.0
