--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.1",
     "firebase-admin": "^11.0.1",
     "ipfs": "^0.64.0",
+    "ipfs-core": "^0.16.0",
     "json-url": "^3.0.0",
     "moralis": "^2.4.0",
     "nanoid": "^3.3.4",
