--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   timeago: ^3.3.0
   url_launcher: ^6.1.5
   web3dart: 2.3.5
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   build_runner: ^2.2.0
