Fix conflict from previous commit

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# backend
+backend/orbitdb
+backend/alertDatabase.json
